--- a/react/package.json
+++ b/react/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "CHANGE_ME",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "name": "admin-leads-app",
   "scripts": {
     "test": "vtex-test-tools test"
   },
   "dependencies": {
     "apollo-client": "^2.6.8",
+    "axios": "^0.21.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
@@ -17,9 +18,12 @@
     "@types/node": "^13.9.8",
     "@types/react": "^16.9.31",
     "@vtex/test-tools": "^3.3.2",
-    "@vtex/tsconfig": "^0.4.4",
+    "@vtex/tsconfig": "^0.5.6",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
-    "typescript": "^3.9.6"
+    "typescript": "3.9.7",
+    "vtex.css-handles": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.css-handles@0.4.4/public/@types/vtex.css-handles",
+    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.131.0/public/@types/vtex.render-runtime",
+    "vtex.styleguide": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.styleguide@9.145.0/public/@types/vtex.styleguide"
   }
 }
